Roughed in single liveview using live actions. Still have to harmonise our_mach and our_machines assigns and behaviour.

--- a/lib/where_machines_web/components/layouts/app.html.heex
+++ b/lib/where_machines_web/components/layouts/app.html.heex
@@ -2,8 +2,8 @@
 <div class="px-4 py-0 sm:px-6 lg:px-8 max-w-2xl xl:max-w-4xl mx-auto bg-neutral-900">
 
   <div class="p-6 bg-[url:var(--bg-image)] bg-no-repeat bg-cover" style={"--bg-image: url(#{~p'/images/curves_bigger.svg'}); --bg-pos: right top -200px;"}>
-    <header class="flex">
-      <h1 class="text-4xl font-mono font-bold text-[#DAA520] tracking-widest mb-2">WHERE MACHINES</h1>
+    <header class="flex justify-between items-start">
+      <h1 class="text-4xl font-mono font-bold text-[#DAA520] tracking-widest w-2/5 mb-2">LAUNCH YOUR USELESS MACHINE IN THE CLOUD</h1>
       <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-200">
         <a href="https://bsky.app/profile/clutterstack.com" class="hover:text-zinc-700">
         Bluesky
