--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,7 +3,8 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
-
+/* Make LiveView wrapper divs transparent for layout */
+[data-phx-session] { display: contents }
 
 h1 {
   @apply mb-6 text-2xl md:text-3xl font-semibold ;
