--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,47 +6,9 @@
 /* Make LiveView wrapper divs transparent for layout */
 [data-phx-session] { display: contents }
 
-h1 {
-  @apply mb-6 text-2xl md:text-3xl font-semibold ;
-}
-
-h1, h1 code.inline {
-  @apply text-zinc-800;
-}
-
-h2 {
-  @apply mb-6 mt-4 border-b text-xl md:text-[1.65rem] font-semibold ;
-}
-
-
-h2, h2 code.inline {
-  @apply text-zinc-800;
-}
-
 .panel {
-  @apply bg-[#111111] rounded-xl p-4;
-  @apply border-2 border-zinc-600;
-  /* @apply outline-2 outline-offset-6 outlne-amber-200; */
-  /* @apply w-full h-full; */
-  @apply flex flex-col justify-between items-center;
-  @apply font-mono;
-  /* outline-color: #404040; 
-  outline-offset: -12px; 
-  outline-width: 2px; 
-  outline-style: solid; */
-}
-
-.button-grid {
-  @apply bg-[#111111] rounded-xl p-4;
+  @apply bg-[#111111] rounded-lg sm:rounded-xl p-2 sm:p-4;
+  @apply my-4;
   @apply border-2 border-zinc-600;
   @apply font-mono;
-  @apply grid grid-cols-subgrid justify-items-start;
-}
-
-.dash-button {
-  @apply w-32 h-12 my-2 rounded-lg border border-[#DAA520];
-}
-
-.status-lv {
-  @apply col-span-4 grid grid-cols-4;
 }
