--- a/lib/where_machines_web/components/layouts/app.html.heex
+++ b/lib/where_machines_web/components/layouts/app.html.heex
@@ -1,8 +1,24 @@
-<div class="px-4 py-0 sm:px-6 lg:px-8 max-w-2xl xl:max-w-4xl mx-auto bg-zinc-900">
-  <div class="py-6 pl-12 px-32 bg-[url:var(--bg-image)] bg-no-repeat bg-cover" style={"--bg-image: url(#{~p'/images/curves_bigger.svg'}); --bg-pos: right top -200px;"}>
-    <header class="flex justify-between items-start">
-      <h1 class="text-4xl font-mono font-bold text-[#DAA520] tracking-widest w-2/5 mb-2">LAUNCH YOUR USELESS MACHINE IN THE CLOUD</h1>
-      <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-200">
+<div class="px-4 sm:px-8 
+              w-screen sm:max-w-3xl 
+              mx-auto 
+              bg-zinc-900 ">
+  <div class="w-full px-[4%] sm:px-2
+              bg-[url:var(--bg-image-big)] bg-[position:var(--bg-pos)] 
+              md:bg-[url:var(--bg-image-big)]
+              bg-no-repeat bg-cover"
+        style={"--bg-image: url(#{~p'/images/curves_bigger.svg'});
+                --bg-image-big: url(#{~p'/images/where_balloon.svg'}); 
+                --bg-pos: right top;"}
+                
+    >
+    <header class="flex items-start justify-between pt-2 sm:pt-2">
+      
+      <h1 class="text-2xl sm:text-3xl font-mono font-bold text-[#DAA520] tracking-widest 
+                w-[8rem] sm:w-[20rem] my-4 sm:mt-12 sm:mb-6">
+                  LAUNCH YOUR USELESS<br> MACHINE<br> IN THE CLOUD
+      </h1>
+
+      <div class="flex items-center gap-4 text-sm sm:text-base font-semibold leading-6 text-zinc-200 mr-16 sm:mr-32">
         <a href="https://github.com/clutterstack" class="hover:text-zinc-700">
           GitHub
         </a>
@@ -10,14 +26,17 @@
           Bluesky
         </a>
       </div>
+
     </header>
     <main class="p-0">
       <.flash_group flash={@flash} />
       <%= @inner_content %>
     </main>
   </div>
-</div>
+  </div>
 
-
+<!--  bg-[length:60%] 
+              bg-[length:460px] sm:bg-[length:550px] lg:bg-[length:700px]" 
+-->
 
 
