--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,8 +7,8 @@
 [data-phx-session] { display: contents }
 
 .panel {
-  @apply bg-[#111111] rounded-lg sm:rounded-xl p-2 sm:p-4;
-  @apply my-4;
+  @apply bg-[#111111] rounded-lg sm:rounded-xl;
+  @apply my-4 p-2;
   @apply border-2 border-zinc-600;
   @apply font-mono;
 }
