map, readme, favicon updates

--- a/lib/where_machines_web/components/layouts/app.html.heex
+++ b/lib/where_machines_web/components/layouts/app.html.heex
@@ -13,7 +13,7 @@
     >
     <header class="flex justify-start pt-2 sm:pt-6">
       <div class="flex items-center gap-4 text-sm sm:text-base font-light leading-6 text-zinc-200 mr-16 sm:mr-32">
-        <a href="https://github.com/clutterstack" class="hover:text-zinc-700">
+        <a href="https://github.com/clutterstack/where_machines" class="hover:text-zinc-700">
           GitHub
         </a>
         <a href="https://bsky.app/profile/clutterstack.com" class="hover:text-zinc-700">
